// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Shows stats when files are added 1`] = `
"**Total**

Files count | Total bundle size | % Changed
----------- | ----------------- | ---------
2 | 8.27 kB → 9.26 kB (+1007 B)<br />5.49 kB → 6.08 kB (gzip) | +11.89%"
`;

exports[`Shows stats when files are added 2`] = `
"**Added**

Asset | File Size | % Changed
----- | --------- | ---------
assets/logo_field-[hash].js | 0 B → 1.47 kB (+1.47 kB)<br />0 B → 962 B (gzip) | -

**Removed**

Asset | File Size | % Changed
----- | --------- | ---------
assets/login_as_button-[hash].js | 502 B → 0 B (-502 B)<br />359 B → 0 B (gzip) | -100%

**Bigger**

No assets were bigger

**Smaller**

No assets were smaller

**Unchanged**

Asset | File Size | % Changed
----- | --------- | ---------
assets/index-[hash].js | 7.78 kB<br />5.14 kB | 0%"
`;

exports[`Shows stats when files are removed 1`] = `
"**Total**

Files count | Total bundle size | % Changed
----------- | ----------------- | ---------
2 | 8.27 kB → 9.26 kB (+1007 B)<br />5.49 kB → 6.08 kB (gzip) | +11.89%"
`;

exports[`Shows stats when files are removed 2`] = `
"**Added**

Asset | File Size | % Changed
----- | --------- | ---------
assets/logo_field-[hash].js | 0 B → 1.47 kB (+1.47 kB)<br />0 B → 962 B (gzip) | -

**Removed**

Asset | File Size | % Changed
----- | --------- | ---------
assets/login_as_button-[hash].js | 502 B → 0 B (-502 B)<br />359 B → 0 B (gzip) | -100%

**Bigger**

No assets were bigger

**Smaller**

No assets were smaller

**Unchanged**

Asset | File Size | % Changed
----- | --------- | ---------
assets/index-[hash].js | 7.78 kB<br />5.14 kB | 0%"
`;

exports[`Shows stats when files are unchanged 1`] = `
"**Total**

Files count | Total bundle size | % Changed
----------- | ----------------- | ---------
2 | 8.27 kB<br />5.49 kB | 0%"
`;

exports[`Shows stats when files are unchanged 2`] = `
"**Added**

No assets were added

**Removed**

No assets were removed

**Bigger**

No assets were bigger

**Smaller**

No assets were smaller

**Unchanged**

Asset | File Size | % Changed
----- | --------- | ---------
assets/index-[hash].js | 7.78 kB<br />5.14 kB | 0%
assets/login_as_button-[hash].js | 502 B<br />359 B | 0%"
`;

exports[`does not display module information when it does not exist 1`] = `
"
Changeset

No files were changed"
`;
